PROJECT (ProjectorVisitorExample)

SET(CMAKE_MODULE_PATH "${ProjectorVisitorExample_SOURCE_DIR}/CMakeModules/")
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)
FIND_PACKAGE(OpenSceneGraph)

OPTION(DEBUG_BUILD "Compile in debug mode" OFF)
OPTION(TEST_BUILD "Compile with test mode" OFF)
MESSAGE(STATUS "Dont forget to add OSGDIR environnement variable")

IF(DEBUG_BUILD)
  SET(CMAKE_BUILD_TYPE "Debug")
  SET(LIBS
    ${OSG_LIBRARY_RELEASE}
    ${OSGTERRAIN_LIBRARY_RELEASE}
    ${OSGDB_LIBRARY_RELEASE}
    ${OSGUTIL_LIBRARY_RELEASE}
    ${OSGVIEWER_LIBRARY_RELEASE}
    ${OSGTEXT_LIBRARY_RELEASE}
    ${OSGGA_LIBRARY_RELEASE}
    ${OPENTHREADS_LIBRARY_RELEASE}
    )
ELSE(DEBUG_BUILD)
  SET(CMAKE_BUILD_TYPE "Release")
  SET(LIBS
    ${OSG_LIBRARY_RELEASE}
    ${OSGTERRAIN_LIBRARY_RELEASE}
    ${OSGDB_LIBRARY_RELEASE}
    ${OSGUTIL_LIBRARY_RELEASE}
    ${OSGVIEWER_LIBRARY_RELEASE}
    ${OSGTEXT_LIBRARY_RELEASE}
    ${OSGGA_LIBRARY_RELEASE}
    ${OPENTHREADS_LIBRARY_RELEASE}
    )
ENDIF(DEBUG_BUILD)

INCLUDE_DIRECTORIES(
  ${OSG_INCLUDE_DIR}
  .
  )

SET(PRG_SRCS
  ProjectorVisitor.cpp
  ProjectorVisitorExample.cpp
 )


ADD_EXECUTABLE(projToHeightfield ${PRG_SRCS})

#IF (TEST_BUILD)
#  ADD_SUBDIRECTORY(test)
#ENDIF (TEST_BUILD)

TARGET_LINK_LIBRARIES(projToHeightfield ${LIBS})
